appset1/services/n8n/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  annotations:
    external-dns.alpha.kubernetes.io/hostname: n8n.loeber.live
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: n8n.loeber.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n-tailscale
            port:
              name: web
  tls:
  - hosts:
    - n8n.loeber.live
    secretName: n8n-tls
